fix: don't send notification emails to disabled users (#21122)
(cherry picked from commit d794f6b980822375dcf3aa0f1176ae19ee0267c7)
Signed-off-by: Morten Svanaes <msvanaes@dhis2.org>